# RecSys_PoliMi_challenge_2022

./: .gitignore  1_tune_base_recommender_EASE_R.py  1_tune_base_recommender_KNN.py  1_tune_base_recommender_RP3beta.py  1_tune_base_recommender_SLIM.py  1_tune_base_recommender_iALS.py  2_tune_URM.py  2_tune_URM_EASE_R.py  2_tune_URM_KNN.py  2_tune_URM_RP3beta.py  2_tune_URM_SLIM.py  4_tune_impression_discounting.py  5_train_final_model_all_data.py  EASE_R_combined.py  EASE_R_urm_tuning.py  IALS_combined.py  ItemKNNSimilarityHybridRecommender.ipynb  KNN_urm_tuning copy.py  README.MD  RP3_combined.py  RP3_urm_tuning.py  SLIM.ipynb  analysis.ipynb  best.md  check_all_user_1_interaction.ipynb  exploration_impressions.ipynb  exploration_prerocessing.ipynb  first_data_exploration.ipynb  hybrid_all_data.py  hybrid_multiple_URM.py  hybrid_multiple_URM_all.py  hybrid_multiple_URM_impressions.py  hybrid_multiple_URM_impressions_all.py  hybrid_one_URM.py  iALS.ipynb  impressions_exploration.ipynb  itemKNNCF.ipynb  itemKNNCF_combined.ipynb  itemKNNCF_details.ipynb  itemKNNCF_hybrid.ipynb  (+42 more)
Data_manager/: URM_generator.py  __init__.py  dataset_splitter.py
Evaluation/: Evaluator.py
HyperparameterTuning/: SearchAbstractClass.py  SearchBayesianSkopt.py  SearchSingleCase.py  run_hyperparameter_search.py
Recommenders/: DatasetRecommender.py  Incremental_Training_Early_Stopping.py  Recommender_import_list.py  hybrid.py
Utils/: create_submission.py
cython_compiler/: run_compile_subprocess.py
data_manager/: UIM_generator.py  URM_generator.py  __init__.py  dataset_loader.py  dataset_splitter.py
evaluation copy/: evaluator.py  metrics.py
hyperparameter_tuning/: SearchBayesianSkopt.py  SearchSingleCase.py  tune_URM.py  tune_base_recommender.py
my_recommenders/: base_recommender.py
utils/: URM_tuner.py  create_submission.py  (+2 more)
(+21 files in other folders)
