[tool.poetry]
name = "recsys_polimi_challenge_2020"
version = "0.1.0"
description = "2022 challenge of the Recomender Systems course at Politecnico di Milano"
authors = ["Paolo Basso <bassopaolo99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
