[tool.poetry]
name = "recsys_polimi_challenge_2020"
version = "0.1.0"
description = "2022 challenge of the Recommender Systems course at Politecnico di Milano"
authors = ["Paolo Basso <bassopaolo99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
sklearn = "^0.0"
ipykernel = "^6.17.1"
cython = "^0.29.32"
setuptools = "^65.6.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
