[tool.poetry]
name = "recsys-polimi-challenge-2020"
version = "0.1.0"
description = "2022 challenge of the Recommender Systems course at Politecnico di Milano"
authors = ["Paolo Basso <bassopaolo99@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "recsys_polimi_challenge_2020"}]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.23.5"
scipy = "^1.9.3"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
ipykernel = "^6.17.1"
cython = "^0.29.32"
setuptools = "^65.6.3"
black = "^22.10.0"
tables = "^3.7.0"
scikit-learn = "^1.1.3"
tqdm = "^4.64.1"
implicit = "^0.6.1"
scikit-optimize = "^0.9.0"
tensorflow = "2.10"
seaborn = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
